Add air pollution apis
